helm/keda-core/keda-core-operator-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keda-operator
  namespace: keda
  annotations:
    checkov.io/skip1: CKV_K8S_49=Default is set by NIC
    checkov.io/skip2: CKV_K8S_38=Default is set by NIC
    checkov.io/skip3: CKV_K8S_AZURE_WSO2_2=Default is set by NIC
spec:
  template:
    spec:
      containers:
      - name: keda-operator
        securityContext:
          runAsUser: 10001
      securityContext:
        seccompProfile:
          type: RuntimeDefault
