helm/keda-core/keda-netpol.yaml
apiVersion: 'cilium.io/v2'
kind: CiliumNetworkPolicy
metadata:
  name: allow-rules-keda-operator
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: keda-operator
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: UDP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: external-scaler
      toPorts:
        - ports:
            - port: '9090'
              protocol: TCP
        - ports:
            - port: '9091'
              protocol: TCP
  ingress:
    - fromEntities:
        - host
